[package]
name = "sparse_qr_clib"
crate-type = ["rlib","cdylib"]
version = "0.1.0"
edition = "2021"
[lib]
name = "sparse_qr_clib"
crate-type = ["rlib","cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse_qr_rust = { git = "https://github.com/ReidAtcheson/sparse_qr_rust.git",  rev = "915fae7a557236e1b20c18bf391901e838eb1062"}
